--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,3 +1,13 @@
+name: Generate Pacman animation
+
+on:
+  schedule:
+    - cron: "0 */12 * * *"
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+
 jobs:
   generate:
     permissions:
@@ -14,13 +24,10 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
 
-      - name: Check output files
-        run: ls -lah
-
       - name: Push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
-          build_dir: .
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
